--- a/blocks/page.css
+++ b/blocks/page.css
@@ -5,13 +5,13 @@
     background-color: #000;
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: 283px repeat(2, minmax(auto));
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 1fr 742px 1fr;
     grid-template-areas: "header header header"
     "profile profile profile"
     "gallery gallery gallery"
     "footer footer footer";
-    margin: auto; 
+    margin: 0 auto; 
     -moz-osx-font-smoothing: grayscale;
 -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
@@ -21,41 +21,14 @@
 }
 
 
-@media screen and (max-width: 320px) and (max-width:768px) {
+@media screen and (max-width: 320px) and (max-width:1280px) {
     .page {
-        max-width: 320px;
-       display: flex;
-       flex-wrap: wrap;
-       flex-direction: column;
-       justify-content: center;
+       display: grid;
        margin: 0 auto;
-    }
-
-    .gallery__cards {
-        width: 90%;
-        margin-bottom: 20px;
+       background-color: #000;
     }
 
     .header {
         width: 90%;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .profile {
-        width: 90%;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    }
-}
-
-@media screen and (max-width: 1280px) and (max-height: 1217px) {
-    .page {
-        max-width: 1280px;
-        margin-bottom: 20px;
-        display: flex;
-        flex-wrap: wrap;
-        
     }
 }
