--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,10 +1,22 @@
+.cards {
+    max-width: 880px;
+    height: 742px;
+    margin-top: 30px;
+ }
+
+.card__list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 282px);
+    gap: 20px 17px;
+    padding: 0;
+    margin: 0;
+}
+
 .card{
   display: flex;
   flex-direction: column;
-  width: 282px;
-  height: 361px;
-  margin: 0;
-}
+  list-style: none;
+ }
 
 .card__image {
     width: 282px;
@@ -35,10 +47,11 @@
     overflow: hidden;
 }
 
-.card__heart {
+.card__heart-button {
     width: 21px;
     height: 18px;
     margin-left: auto;
     margin-right: 30px;
-    background: #fff;
+    border: none;
+    background: transparent url("../vectors/Vector.svg") center no-repeat;
 }
