--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,11 +1,11 @@
 
 .header {
-    grid-area: header;
-    margin: 40px 200px 0 200px;
+    margin: auto;
     max-width: 880px;
     height: 74px;
     border-bottom: 1px solid #545454;
     display: flex;
+    padding-top: 40px;
 }
 
 .header__logo {
@@ -16,3 +16,16 @@
     margin: 0 auto 41px 0;
     fill: #fff;
 }
+/* 
+@media screen and (max-width: 320px) {
+    .header {
+        margin-top: 28px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .page__section {
+        margin: 0 20px;
+        max-width: calc(100% - 40px);
+    }
+} */
