--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    margin: 67px auto 60px;
+margin: 67px auto 60px;
 }
 
 .footer__copyright {    
@@ -13,3 +13,12 @@ font-size: 18px;
 line-height: 1.2;
 color:#545454;
 }
+
+/* @media screen and (min-width: 320px) and (max-width: 568px) {
+    .footer__copyright {
+        width: calc(100% - 40px);
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+    }
+} */
