--- a/blocks/page.css
+++ b/blocks/page.css
@@ -27,14 +27,11 @@
     margin: 0 auto;
 
 }
-/* @media screen and (max-width: 320px) and (max-width:1280px) {
-    .page {
-       display: grid;
-       margin: 0 auto;
-       background-color: #000;
+ 
+@media screen and (max-width: 1100px) { 
+    .page__section {
+       margin: 0 20px;
+       max-width: calc(100% - 40px);
     }
-
-    .header {
-        width: 90%;
-    }
-} */
+}
+    
