--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -7,14 +7,14 @@
 .profile__avatar {
     max-width: 120px;
     min-height: 120px;
-   border-radius: 50%;
-      margin: 3.75px 0;
-      object-fit: cover;
-      background-position: center;
+    border-radius: 50%;
+    margin: 3.75px 0;
+    object-fit: cover;
+    background-position: center;
 }
 
 .profile__info {
-   display: grid;
+    display: grid;
     grid-template-areas: "title button"
     "description description";
     grid-template-columns: minmax(auto, 373px) auto;
@@ -25,14 +25,15 @@
     grid-area: title;
     color: #fff;
     font-family: 'Inter', Arial, sans-serif;
-font-style: normal;
+    font-style: normal;
 font-weight: 500;
 font-size: 42px;
 line-height: 1.1;
 margin: 0;
+    max-width: 373px;
 text-overflow: ellipsis;
-white-space: nowrap;
-overflow: hidden;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .profile__description {
@@ -45,13 +46,14 @@ line-height: 1.2;
 color: #FFF;
 margin: 7px auto auto 0;
 
+
 }
 
 .profile__edit-button {
     grid-area: button;
     width: 24px;
     height: 24px;
-    border: 1px solid #fff; 
+    border: 1px solid #fff;
     margin: auto 18px;
     background: transparent url("../vectors/pencil.svg");
    background-position: center;
@@ -80,28 +82,47 @@ margin: 7px auto auto 0;
 }
 
 
-@media screen and (min-width: 320px) and (max-width: 568px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
     .profile {
         display: flex;
         flex-direction: column;
-        align-items: center;
     }
 
     .profile__info {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        width: 100%;
+        margin: 22px auto;
+    }
+
+    .profile__title {
+        color: #FFF;
+        font-size: 22px;
+        font-family: 'Inter', Arial, sans-serif;
+        font-weight: 500;
+        max-width: 320px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
 
     .profile__description {
-        width: 100%;
+        color: #FFF;
         text-align: center;
+        font-size: 14px;
+        font-family: 'Inter', Arial, sans-serif;
+        width:100%;
+        max-width: 320px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        margin: 14px 19px 0;
     }
 
     .profile__plus-button {
-        margin:  0;
+        margin-top:  36px;
         width: 100%;
+        max-width: 568px;
     }
 }
 
