--- a/blocks/card.css
+++ b/blocks/card.css
@@ -13,7 +13,6 @@
 
 .card__description{
     width: 282px;
-    height: 79px;
     border-radius: 0 0 10px 10px;
     background-color: #fff;
    display: flex;
@@ -22,8 +21,8 @@
 }
 
 .card__title {
-    margin-left: 20px;  
-    /* margin-right: auto; */
+    margin-left: 20px;
+    margin-top: 25px;
     font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
@@ -38,7 +37,6 @@
 .card__heart-button {
     width: 21px;
     height: 18px;
-    /* margin-left: auto; */
     margin-right: 29px;
     border: none;
     background: transparent url("../vectors/Vector.svg") center no-repeat;
