--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,8 +2,7 @@
 .header {
     margin: auto;
     max-width: 880px;
-    height: 74px;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
     display: flex;
     padding-top: 40px;
 }
