--- a/blocks/card.css
+++ b/blocks/card.css
@@ -21,14 +21,14 @@
 }
 
 .card__title {
-    margin-left: 20px;
-    margin-top: 25px;
+    max-width: 210px;
+    margin: 25px auto 25px 20px;
     font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
     line-height: 1.2;
-    color: #000000;
+    color: #000;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
@@ -40,5 +40,12 @@
     margin-right: 29px;
     border: none;
     background: transparent url("../vectors/Vector.svg") center no-repeat;
+    transition: opacity 0.6s linear;
 }
+
+.card__heart-button:hover {
+    opacity: 0.6;
+    cursor: pointer;
+}
+
 
