--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -13,3 +13,12 @@ line-height: 1.2;
 color:#545454;
 }
 
+@media screen and (max-width: 320px) {
+.footer {
+    margin: 48px auto 36px;
+}
+.footer__copyright {
+   font-size: 14px;
+}
+}
+
