--- a/blocks/header.css
+++ b/blocks/header.css
@@ -15,3 +15,19 @@
     margin: 0 auto 41px 0;
     fill: #fff; 
 }
+
+@media screen and (max-width: 320px) {
+.header {
+    margin: auto;
+    max-width: 320px;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    padding-top: 28px;
+}    
+.header__logo {
+    max-width: 126px;
+    height: 24px;
+    margin: 0 auto 32px 27px;
+}    
+}
+    
+
