--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -6,7 +6,7 @@
 
 .profile__avatar {
     max-width: 120px;
-    min-height: 120px;
+    max-height: 120px;
     border-radius: 50%;
     margin: 3.75px 0;
     object-fit: cover;
@@ -66,6 +66,7 @@ text-overflow: ellipsis;
 
 .profile__edit-button:hover {
     opacity: 0.6;
+    cursor: pointer;
 }
 
 .profile__plus-button {
@@ -82,12 +83,13 @@ text-overflow: ellipsis;
 
 .profile__plus-button:hover {
     opacity: 0.6;
+    cursor: pointer;
+
 }
 
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
     .profile {
-        display: flex;
         flex-direction: column;
     }
 
@@ -99,26 +101,21 @@ text-overflow: ellipsis;
     }
 
     .profile__title {
-        color: #FFF;
         font-size: 22px;
-        font-family: 'Inter', Arial, sans-serif;
-        font-weight: 500;
         max-width: 320px;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
+    }
+
+    .profile__edit-button {
+        width: 18px;
+        height: 18px;
+        margin: auto 10px;
     }
 
     .profile__description {
-        color: #FFF;
         text-align: center;
         font-size: 14px;
-        font-family: 'Inter', Arial, sans-serif;
         width:100%;
         max-width: 320px;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
         margin: 14px 19px 0;
     }
 
@@ -126,6 +123,5 @@ text-overflow: ellipsis;
         margin-top:  36px;
         width: 100%;
     }
-}
-
+} 
    
