--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -14,10 +14,9 @@
     margin: 0 auto;
 }
 
-@media screen and (max-width: 320px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 .gallery {
     margin-top: 0;
-    min-width: 320px;
 }
 .gallery__cards {
     width: calc(100% - 40px);
