--- a/blocks/page.css
+++ b/blocks/page.css
@@ -27,9 +27,15 @@
 
 }
  
-@media screen and (max-width: 1280px) { 
-    .page__section {
-       max-width: calc(100% - 40px);
+@media screen and (min-width:320px) and (max-width: 768px) { 
+   .page__content {
+    margin: 0 auto;
+    overflow-x: hidden;
+    width: 100%;
+   } 
+
+  .page__section {
+      max-width: calc(100% - 40px);
     }
 }
     
