--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -39,6 +39,7 @@ font-weight: 500;
 font-size: 42px;
 line-height: 1.1;
 margin: 0;
+text-align: center;
     max-width: 373px;
 text-overflow: ellipsis;
     white-space: nowrap;
@@ -54,6 +55,7 @@ font-size: 18px;
 line-height: 1.2;
 color: #FFF;
 max-width: 415px;
+text-align: center;
 margin: 7px auto auto 0;
 text-overflow: ellipsis;
     white-space: nowrap;
@@ -107,27 +109,27 @@ text-overflow: ellipsis;
     .profile__info {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
         margin: 26.25px auto 0;
+        max-width: 320px;
     }
 
     .profile__title {
         font-size: 22px;
         max-width: 196px;
+        margin: 0 0 0 62px;
     }
 
     .profile__edit-button {
         width: 18px;
         height: 18px;
-        margin: 0 10px;
+        margin: 0 34px 0 10px;
     }
 
     .profile__description {
         font-size: 14px;
         width:100%;
-        min-width: 282px;
+        max-width: 282px;
         margin: 14px auto 0;
-        text-align: center;
     }
 
     .profile__plus-button {
