--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -14,7 +14,7 @@
     margin: 0 auto;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 320px) and (max-width: 768px) {
 .gallery {
     margin-top: 0;
 }
