--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -122,7 +122,7 @@ text-overflow: ellipsis;
     .profile__edit-button {
         width: 18px;
         height: 18px;
-        margin: 0 34px 0 10px;
+        margin: 0 auto 0 10px;
     }
 
     .profile__description {
