--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,7 +11,11 @@
    width: 100%;
    height: 100%;
    z-index: 3;
-   /* display: none; */
+   display: none;
+}
+
+.modal.modal_opened {
+  display: flex;
 }
 
 .modal__container {
