--- a/blocks/card.css
+++ b/blocks/card.css
@@ -5,6 +5,26 @@
   list-style: none;
  }
 
+.card__container {
+    position: relative;
+    border: none;
+    margin: 0;
+}
+
+.card__trash-button {
+    width: 18px;
+    height: 19.3px;
+    background: url("../vectors/Trash-2.svg") center no-repeat;
+    position: absolute;
+    top: 18px;
+    right: 15px;
+    padding: 0;
+}
+
+.card__trash-button_active {
+    background: url("../vectors/Trash.svg");
+}
+
 .card__image {
     width: 282px;
     height: 282px;
@@ -48,4 +68,7 @@
     cursor: pointer;
 }
 
+.card__heart-button_active {
+ background: url("../vectors/Union.svg");
+}
 
