--- a/blocks/card.css
+++ b/blocks/card.css
@@ -5,20 +5,26 @@
   list-style: none;
  }
 
-.card__container {
+.card__image-container {
     position: relative;
-    border: none;
+    display: inline-block;
     margin: 0;
 }
 
 .card__trash-button {
     width: 18px;
     height: 19.3px;
-    background: url("../vectors/Trash-2.svg") center no-repeat;
+    background: url("../vectors/Trash-2.svg") center  no-repeat;
     position: absolute;
     top: 18px;
     right: 15px;
     padding: 0;
+}
+
+
+.card__trash-button:hover {
+    opacity: 0.5;
+    cursor: pointer;
 }
 
 .card__trash-button_active {
@@ -69,6 +75,6 @@
 }
 
 .card__heart-button_active {
- background: url("../vectors/Union.svg");
+ background: url("../vectors/Union.png");
 }
 
