--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,11 +11,18 @@
    width: 100%;
    height: 100%;
    z-index: 3;
-   display: none;
+   display: flex;
+   align-items: center;
+   visibility: hidden;
+   opacity: 0;
+   transition: visibility 0s liner 0.5s, opacity 0.5s linear;
 }
 
 .modal_opened {
   display: flex;
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
 }
 
 .modal__container {
@@ -30,6 +37,14 @@
     z-index: 999;
     margin: 0;
     transform: translate(-50%, -50%);
+}
+
+.modal__preview-container {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
 }
 
 .modal__close-button {
@@ -65,9 +80,6 @@ font-size: 12px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
-    position: absolute;
-    left:0;
-    bottom:10px;
 }
 
 .modal__title {
