--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -13,16 +13,17 @@
    z-index: 3;
    display: flex;
    align-items: center;
+   justify-content: center;
    visibility: hidden;
    opacity: 0;
-   transition: visibility 0s liner 0.5s, opacity 0.5s linear;
+   transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
 .modal_opened {
   display: flex;
   visibility: visible;
   opacity: 1;
-  transition-delay: 0s;
+  transition-delay: 0.2s;
 }
 
 .modal__container {
@@ -60,10 +61,12 @@
      position: absolute;
      right: -48.28px;
      top: -48.28px;
+     transition: opacity 0.2s linear;
 }
 
 
 .modal__close-button:hover {
+    visibility: visible;
     opacity:0.5;
     cursor: pointer;
 }
