--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,15 +1,13 @@
 .modal {
    background-color: rgba(0, 0, 0, 0.5);
-   width: 1280px;
    height: 100vh;
+   width: 100%;
    background-size: cover;
    position: fixed;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
-   width: 100%;
-   height: 100%;
    z-index: 3;
    display: flex;
    align-items: center;
@@ -117,7 +115,7 @@ line-height: normal;
     margin: 0 0 29.74px;
     border: none;
     padding: 0 0 11px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2)
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 ::placeholder {
