--- a/blocks/card.css
+++ b/blocks/card.css
@@ -22,6 +22,7 @@
 
 .card__delete-button:hover {
     opacity: 0.5;
+    background: url("../vectors/Trash.svg") center  no-repeat;
     cursor: pointer;
 }
 
