--- a/blocks/page.css
+++ b/blocks/page.css
@@ -26,7 +26,8 @@
 
 }
  
-@media screen and (min-width:320px) and (max-width: 768px) { 
+@media screen  and (max-width: 768px) { 
+  
   .page__section {
       max-width: calc(100% - 40px);
     }
