--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,79 +1,75 @@
-
-.card{
+.card {
   display: flex;
   flex-direction: column;
   list-style: none;
   position: relative;
- }
-
-
-.card__delete-button {
-    width: 18px;
-    height: 19.3px;
-    background: url("../vectors/Trash-2.svg") center  no-repeat;
-    position: absolute;
-    top: 18px;
-    right: 15px;
-    padding: 0;
-    flex-shrink: 0;
-    border: none;
 }
 
+.card__delete-button {
+  width: 18px;
+  height: 19.3px;
+  background: url("../vectors/Trash-2.svg") center no-repeat;
+  position: absolute;
+  top: 18px;
+  right: 15px;
+  padding: 0;
+  flex-shrink: 0;
+  border: none;
+}
 
 .card__delete-button:hover {
-    opacity: 0.5;
-    background: url("../vectors/Trash.svg") center  no-repeat;
-    cursor: pointer;
+  opacity: 0.5;
+  background: url("../vectors/Trash.svg") center no-repeat;
+  cursor: pointer;
 }
 
 .card__delete-button_active {
-    background: url("../vectors/Trash.svg");
+  background: url("../vectors/Trash.svg");
 }
 
 .card__image {
-    width: 282px;
-    height: 282px;
-    border-radius: 10px 10px 0px 0px;
+  width: 282px;
+  height: 282px;
+  border-radius: 10px 10px 0px 0px;
 }
 
-.card__description{
-    width: 282px;
-    border-radius: 0 0 10px 10px;
-    background-color: #fff;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
+.card__description {
+  width: 282px;
+  border-radius: 0 0 10px 10px;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .card__title {
-    max-width: 210px;
-    margin: 25px auto 25px 20px;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 1.2;
-    color: #000;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+  max-width: 210px;
+  margin: 25px auto 25px 20px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 1.2;
+  color: #000;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card__heart-button {
-    width: 21px;
-    height: 18px;
-    margin-right: 29px;
-    border: none;
-    background: transparent url("../vectors/Vector.svg") center no-repeat;
-    transition: opacity 0.6s linear;
+  width: 21px;
+  height: 18px;
+  margin-right: 29px;
+  border: none;
+  background: transparent url("../vectors/Vector.svg") center no-repeat;
+  transition: opacity 0.6s linear;
 }
 
 .card__heart-button:hover {
-    opacity: 0.5;
-    cursor: pointer;
+  opacity: 0.5;
+  cursor: pointer;
 }
 
 .card__heart-button_active {
- background: url("../vectors/Union.png");
+  background: url("../vectors/Union.png");
 }
-
