--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,141 +1,138 @@
 .profile {
-display: flex;
-justify-content: center;
-align-items: center;
-    margin: 40px auto 51px;
-    max-width: 880px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 40px auto 51px;
+  max-width: 880px;
 }
 
 .profile__avatar {
-    max-width: 168.75px;
-    max-height: 127.5px;
-    margin: 3.75px 0;
-    flex-shrink: 0;
-    overflow: hidden;
-    background-position: center;
+  max-width: 168.75px;
+  max-height: 127.5px;
+  margin: 3.75px 0;
+  flex-shrink: 0;
+  overflow: hidden;
+  background-position: center;
 }
 
 .profile__avatar img {
-    width:120px;
-    height: 120px;
-    border-radius: 50%;
-    object-fit: cover;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .profile__info {
-    display: grid;
-    grid-template-areas: "title button"
+  display: grid;
+  grid-template-areas:
+    "title button"
     "description description";
-    grid-template-columns: minmax(auto, 373px) auto;
-    margin: 22px auto auto 21.5px;
+  grid-template-columns: minmax(auto, 373px) auto;
+  margin: 22px auto auto 21.5px;
 }
 
 .profile__title {
-    grid-area: title;
-    color: #fff;
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-font-weight: 500;
-font-size: 42px;
-line-height: 1.1;
-margin: 0;
-    max-width: 373px;
-text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+  grid-area: title;
+  color: #fff;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 42px;
+  line-height: 1.1;
+  margin: 0;
+  max-width: 373px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__description {
-    grid-area: description;
-    font-family: 'Inter', Arial, sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 1.2;
-color: #FFF;
-max-width: 415px;
-text-align: center;
-margin: 7px auto auto 0;
-text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-
+  grid-area: description;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.2;
+  color: #fff;
+  max-width: 415px;
+  text-align: center;
+  margin: 7px auto auto 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__edit-button {
-    grid-area: button;
-    width: 24px;
-    height: 24px;
-    border: 1px solid #fff;
-    margin: auto 18px;
-    background: transparent url("../vectors/pencil.svg");
-   background-position: center;
-   background-repeat: no-repeat;
-   transition: opacity 0.6s linear;
+  grid-area: button;
+  width: 24px;
+  height: 24px;
+  border: 1px solid #fff;
+  margin: auto 18px;
+  background: transparent url("../vectors/pencil.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: opacity 0.6s linear;
 }
 
 .profile__edit-button:hover {
-    opacity: 0.6;
-    cursor: pointer;
+  opacity: 0.6;
+  cursor: pointer;
 }
 
 .profile__plus-button {
-    margin: 0;
-    min-width: 150px;
-    height: 50px;
-    border: 2px solid #FFF;
-    border-radius: 2px;
-    background: transparent url("../vectors/Vectorplus.svg");
-    background-position: center;
-    background-repeat: no-repeat;
-    transition: opacity 0.6s linear;
-} 
-
-.profile__plus-button:hover {
-    opacity: 0.6;
-    cursor: pointer;
-
+  margin: 0;
+  min-width: 150px;
+  height: 50px;
+  border: 2px solid #fff;
+  border-radius: 2px;
+  background: transparent url("../vectors/Vectorplus.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: opacity 0.6s linear;
 }
 
+.profile__plus-button:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
 
 @media screen and (max-width: 768px) {
-    
-    .profile {
-        flex-direction: column;
-        margin: 42px auto 36px;
-        max-width: 768px;
-    }
+  .profile {
+    flex-direction: column;
+    margin: 42px auto 36px;
+    max-width: 768px;
+  }
 
-    .profile__info {
-        display: flex;
-        flex-wrap: wrap;
-        margin: 26.25px auto 0;
-        max-width: 320px;
-    }
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 26.25px auto 0;
+    max-width: 320px;
+  }
 
-    .profile__title {
-        font-size: 22px;
-        max-width: 196px;
-        margin: 0 0 0 62px;
-    }
+  .profile__title {
+    font-size: 22px;
+    max-width: 196px;
+    margin: 0 0 0 62px;
+  }
 
-    .profile__edit-button {
-        width: 18px;
-        height: 18px;
-        margin: 0 auto 0 10px;
-    }
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    margin: 0 auto 0 10px;
+  }
 
-    .profile__description {
-        font-size: 14px;
-        width:100%;
-        max-width: 282px;
-        margin: 14px auto 0;
-        text-align: center;
-    }
+  .profile__description {
+    font-size: 14px;
+    width: 100%;
+    max-width: 282px;
+    margin: 14px auto 0;
+    text-align: center;
+  }
 
-    .profile__plus-button {
-        margin: 36px 19px 0;
-        max-width: 100%;
-        min-width: 282px;
-    }
-} 
+  .profile__plus-button {
+    margin: 36px 19px 0;
+    max-width: 100%;
+    min-width: 282px;
+  }
+}
