--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -6,6 +6,10 @@
   max-width: 880px;
 }
 
+.profile__avatar-container {
+  position: relative;
+}
+
 .profile__avatar {
   width: 120px;
   height: 120px;
@@ -14,23 +18,25 @@
   background-position: center;
 }
 
-.profile__avatar-edit {
-  position: absolute;
-  background: transparent url("../vectors/pencil.svg");
-  width: 120px;
-  height: 120px;
-  background-size: 20%;
-  background-repeat: no-repeat;
-  border: none;
-  opacity: 0;
-  border-radius: 50%;
-  object-fit: cover;
-  background-position: center;
-  background-color: rgba(0,0,0,0.8);
-  transition: ease-in-out 0.3s;
+.profile__avatar:hover {
+  opacity: 0.8;
 }
 
-.profile__avatar-edit:hover {
+.profile__avatar-edit-button {
+  position: absolute;
+  background: transparent url("../vectors/Vector\ \(1\).svg") center no-repeat;
+  width: 26px;
+  height: 26px;
+  top: 47px; 
+  left: 47px;
+  border: none;
+  opacity: 0;
+  background-size: contain;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition:  0.5s ease-in-out;
+}
+
+.profile__avatar-edit-button:hover {
   opacity: 1;
  cursor: pointer;
 }
