--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -47,6 +47,9 @@
 .modal__container_type_delete {
   width: 430px;
   height: 181px;
+  border-radius: 10px;
+background: #FFF;
+box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
 }
 
 .modal__container_type_avatar {
@@ -173,7 +176,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin: 18.26px 0 0;
+  margin: 18.5px 0 0;
   border: none;
 }
 
