--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -55,6 +55,9 @@ box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
 .modal__container_type_avatar {
   width: 430px;
   height: 272px;
+  border-radius: 10px;
+background: #FFF;
+box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
 }
 
 .modal__close-button {
