--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -80,7 +80,7 @@
   background: url("../vectors/Union.png");
 }
 
-.card__heart-number {
+.card__heart-count {
   color: #000;
   text-align: center;
   font-family: "inter", Arial, sans-serif;
