--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -113,7 +113,15 @@ box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 54px 36px 36.51px;
+  margin: 54px 36px 36px;
+}
+
+.modal__form_type-delete {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 20px 36px 36px;
+  padding: 0;
 }
 
 .modal__label {
@@ -203,7 +211,7 @@ box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
   .modal__title {
     width: 238px;
     font-size: 18px;
-    margin: 25px 22px 75px;
+    margin: 25px 22px 38px;
   }
 
   .modal__close-button {
