fix/ everything was fixed so far

--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -75,7 +75,7 @@
   background: url("../vectors/Union.png");
 }
 
-.card__heart-count {
+/* .card__heart-count {
   color: #000;
   text-align: center;
   font-family: "inter", Arial, sans-serif;
@@ -83,4 +83,4 @@
   font-size: 13px;
   line-height: 1.2;
   margin: 3px 0 0;
-}
+} */
